; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_client/extr_deprecated.c_blame_wrapper_receiver.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_client/extr_deprecated.c_blame_wrapper_receiver.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.blame_receiver_wrapper_baton = type { i32, i32* (i32, i32, i32, i8*, i8*, i8*, i32*)* }

@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i32, i32, i8*, i8*, i32, i8*, i8*, i8*, i8*, i32*)* @blame_wrapper_receiver to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @blame_wrapper_receiver(i8* %0, i32 %1, i32 %2, i8* %3, i8* %4, i32 %5, i8* %6, i8* %7, i8* %8, i8* %9, i32* %10) #0 {
  %12 = alloca i32*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i8*, align 8
  %17 = alloca i8*, align 8
  %18 = alloca i32, align 4
  %19 = alloca i8*, align 8
  %20 = alloca i8*, align 8
  %21 = alloca i8*, align 8
  %22 = alloca i8*, align 8
  %23 = alloca i32*, align 8
  %24 = alloca %struct.blame_receiver_wrapper_baton*, align 8
  store i8* %0, i8** %13, align 8
  store i32 %1, i32* %14, align 4
  store i32 %2, i32* %15, align 4
  store i8* %3, i8** %16, align 8
  store i8* %4, i8** %17, align 8
  store i32 %5, i32* %18, align 4
  store i8* %6, i8** %19, align 8
  store i8* %7, i8** %20, align 8
  store i8* %8, i8** %21, align 8
  store i8* %9, i8** %22, align 8
  store i32* %10, i32** %23, align 8
  %25 = load i8*, i8** %13, align 8
  %26 = bitcast i8* %25 to %struct.blame_receiver_wrapper_baton*
  store %struct.blame_receiver_wrapper_baton* %26, %struct.blame_receiver_wrapper_baton** %24, align 8
  %27 = load %struct.blame_receiver_wrapper_baton*, %struct.blame_receiver_wrapper_baton** %24, align 8
  %28 = getelementptr inbounds %struct.blame_receiver_wrapper_baton, %struct.blame_receiver_wrapper_baton* %27, i32 0, i32 1
  %29 = load i32* (i32, i32, i32, i8*, i8*, i8*, i32*)*, i32* (i32, i32, i32, i8*, i8*, i8*, i32*)** %28, align 8
  %30 = icmp ne i32* (i32, i32, i32, i8*, i8*, i8*, i32*)* %29, null
  br i1 %30, label %31, label %45

31:                                               ; preds = %11
  %32 = load %struct.blame_receiver_wrapper_baton*, %struct.blame_receiver_wrapper_baton** %24, align 8
  %33 = getelementptr inbounds %struct.blame_receiver_wrapper_baton, %struct.blame_receiver_wrapper_baton* %32, i32 0, i32 1
  %34 = load i32* (i32, i32, i32, i8*, i8*, i8*, i32*)*, i32* (i32, i32, i32, i8*, i8*, i8*, i32*)** %33, align 8
  %35 = load %struct.blame_receiver_wrapper_baton*, %struct.blame_receiver_wrapper_baton** %24, align 8
  %36 = getelementptr inbounds %struct.blame_receiver_wrapper_baton, %struct.blame_receiver_wrapper_baton* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 8
  %38 = load i32, i32* %14, align 4
  %39 = load i32, i32* %15, align 4
  %40 = load i8*, i8** %16, align 8
  %41 = load i8*, i8** %17, align 8
  %42 = load i8*, i8** %22, align 8
  %43 = load i32*, i32** %23, align 8
  %44 = call i32* %34(i32 %37, i32 %38, i32 %39, i8* %40, i8* %41, i8* %42, i32* %43)
  store i32* %44, i32** %12, align 8
  br label %47

45:                                               ; preds = %11
  %46 = load i32*, i32** @SVN_NO_ERROR, align 8
  store i32* %46, i32** %12, align 8
  br label %47

47:                                               ; preds = %45, %31
  %48 = load i32*, i32** %12, align 8
  ret i32* %48
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
